FIX : studentmodel wasn't aligned with other service to fetch sod_schedule table, Views : Layout : correcting path to script.js, Student : relocating script to script.js, CSS : matching cohorts filter in student view to match with existing button

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -318,7 +318,7 @@ footer {
 }
 
 .cohort-filters .neumorphic-button {
-    padding: 5px 10px;
+    padding: 8px 15px;
     font-size: 0.9em;
 }
 
